css/styles.css
body{
background-image: url("https://www.heinzhistorycenter.org/wp-content/uploads/2015/01/Mister-Rogers-living-room.jpg");
background-size: cover;
background-repeat: no-repeat;
font-family: georgia;
text-align: center;
}
.threed {
  color: rgb(78, 56, 56);
  text-shadow: 0 1px 0 #999999, 0 2px 0 #888888,
           0 3px 0 #777777, 0 4px 0 #666666,
           0 5px 0 #555555, 0 6px 0 #444444,
           0 7px 0 #333333, 0 8px 7px rgba(0, 0, 0, 0.4),
           0 9px 10px rgba(0, 0, 0, 0.2);
  word-wrap: break-word;
}
h1{
  letter-spacing: -1px;
  text-transform: uppercase;
}
.jumbotron{
  background-color: rgba(250, 235, 215, 0.712);
  background-image: ur("http://www.thighswideshut.org/twsdo/wp-content/uploads/2012/11/mr-rogers-robot.jpg");
  background-repeat: no-repeat;
  border-style: double;
  border-width: 8px;
  border-color: rgb(88, 42, 11);
}
#frame {
  border-style: double;
  border-width: 8px;
  border-color: rgb(88, 42, 11);
}
#beepboop {
  color: rgb(133, 33, 33);
  text-shadow: 0 1px 0 #960000, 0 2px 0 #888888,
           0 3px 0 #660000, 0 4px 0 #666666,
           0 5px 0 #460000, 0 6px 0 #444444,
           0 7px 0 #333333, 0 8px 7px rgba(0, 0, 0, 0.4),
           0 9px 10px rgba(0, 0, 0, 0.2);
}
button {
  color: black;
}
.btn:hover {
  transform: translateY(-5px);
  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.801);
}
#output {
  text-align: auto;
  padding: 10%;
}

